

*** 16th Feb, 2016
- Added PS4 Controls for Navigation & Interaction
	(Source: http://postimg.org/image/s3nazp8bn/)
- Removed the SkyboxMesh component (As it is not needed in Unity 5)
- Added Two Cardbard Audio Plugins:
	- Assets -> Plugins -> x86 -> audiopluginvrunity.dll
	- Assets -> Plugins -> x86_64 -> audiopluginvrunity.dll
- Disabled Jump

***
- Added mouse squeaks audio.
- Added script to play squeaking sound dynamically based on player position.
- Updated Readme.md
- Added #.dll in .gitignore

**** 17th Feb, 2016
- Created Corridor_wall prefab
- Added walls to all the possible places
- Removed extra alligator

**** 17th Feb, 2016
- Added new scene (exterior of pyramid)
- human body prefab

**** 17th Feb, 2016
- Positioned the human body in the scene
- Added brain and lung models inside the body

**** 17th Feb, 2016
- Added Lab scene (Classroom scene) [Beta]
- Added CardboardMain & FPS Controller to the LAB Scene

**** 18th Feb, 2016
- Added script to change the shader of body for transparency

**** 18th Feb, 2016
- Added script to for the mummification process(WIP)

**** 19th Feb, 2016
- Changes to mummification script

**** 19th Feb, 2016
- Fix in mummification script for picking issue.

**** 19th Feb, 2016
- Added heart, intestines.
- Changes in mummification script.
- Updated Readme.md.

**** 19th Feb, 2016
- Changes to mummification script
	- Mummification process upto salting completed
	- Body becomes opaque again after all organs are removed
- Removed ChangeBodyTransparency script and moved its contents to Mummification script

**** 19th Feb, 2016
- Added sound effects and made design changes to pyramid.unity
- Added texture for body wrapped in linen stage of mummification process

**** 20th Feb, 2016
- Mummification process upto mummy wrapping conpleted.

**** 20th Feb, 2016
- Mummification process script development completed.
- Added new script MoveSarcophagusLid.cs
- Added stone lid slide audio.
- Updated Readme.md