@@ -109,3 +109,6 @@
 - Added new script MoveSarcophagusLid.cs
 - Added stone lid slide audio.
 - Updated Readme.md
+
+**** 21st Feb, 2016
+- Fixed issue with player sometimes not being able to pick anything after picking knife.
